Fixing a few sonar code quality violations